cfn_benchmark/cfn_templates/rickdevera__oh_cnapp/ambassador/scenarios/ELBCode.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS CloudFormation Template: EC2 with Apache Web Server and ELB'

Parameters:
  ProjectName:
    Description: Project Name (like workshop, immersionday, awsjams)
    Type: String
    Default: ambassador
  Environment:
    Description: Environment
    Type: String
    Default:  lab
  Author:
    Description: Author
    Type: String
    Default: rdevera@tenable.com
  Version:
    Description: Version
    Type: String
    Default: v1

Resources:
  MyInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow HTTP and SSH to the host
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  MyGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref MyInternetGateway
      VpcId: !Ref MyVPC

  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  MySubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  MyELB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Subnets:
        - !Ref MySubnet
      SecurityGroups:
        - !Ref MyInstanceSecurityGroup

  MyTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC

  MyListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref MyTargetGroup
      LoadBalancerArn: !Ref MyELB
      Port: 80
      Protocol: HTTP

  MyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0abcdef1234567890 # Example AMI ID, replace with a valid one
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref MyInstanceSecurityGroup
      SubnetId: !Ref MySubnet
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Welcome to your Apache server</h1>" > /var/www/html/index.html

Outputs:
  WebsiteURL:
    Value: !Sub 'http://${MyELB.DNSName}/'
    Description: URL of the website hosted on the Apache server
